Correct Carrousel overflow on small screens

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,55 +12,55 @@ html {
 
 /* variables-light.css */
 .light-theme {
-  --primary: #725188;
-  --surface-tint: #725188;
+  --primary: #315070;
+  --surface-tint: #426181;
   --on-primary: #FFFFFF;
-  --primary-container: #F3DAFF;
-  --on-primary-container: #2A0C40;
-  --secondary: #675A6E;
+  --primary-container: #567597;
+  --on-primary-container: #FFFFFF;
+  --secondary: #545F6E;
   --on-secondary: #FFFFFF;
-  --secondary-container: #EFDCF5;
-  --on-secondary-container: #221729;
-  --tertiary: #815154;
+  --secondary-container: #D9E5F6;
+  --on-secondary-container: #3F4A57;
+  --tertiary: #614369;
   --on-tertiary: #FFFFFF;
-  --tertiary-container: #FFDADB;
-  --on-tertiary-container: #331014;
+  --tertiary-container: #88678F;
+  --on-tertiary-container: #FFFFFF;
   --error: #BA1A1A;
   --on-error: #FFFFFF;
   --error-container: #FFDAD6;
   --on-error-container: #410002;
-  --background: #FFF7FD;
-  --on-background: #1E1A20;
-  --surface: #FFF7FD;
-  --on-surface: #1E1A20;
-  --surface-variant: #EADFEA;
-  --on-surface-variant: #4B454D;
-  --outline: #7C757E;
-  --outline-variant: #CDC3CE;
+  --background: #FAF9FC;
+  --on-background: #1A1C1E;
+  --surface: #FAF9FC;
+  --on-surface: #1A1C1E;
+  --surface-variant: #DFE2EA;
+  --on-surface-variant: #43474D;
+  --outline: #73777E;
+  --outline-variant: #C3C7CE;
   --shadow: #000000;
   --scrim: #000000;
-  --inverse-surface: #332F35;
-  --inverse-on-surface: #F7EEF6;
-  --inverse-primary: #DFB8F7;
-  --primary-fixed: #F3DAFF;
-  --on-primary-fixed: #2A0C40;
-  --primary-fixed-dim: #DFB8F7;
-  --on-primary-fixed-variant: #593A6F;
-  --secondary-fixed: #EFDCF5;
-  --on-secondary-fixed: #221729;
-  --secondary-fixed-dim: #D2C1D9;
-  --on-secondary-fixed-variant: #4F4256;
-  --tertiary-fixed: #FFDADB;
-  --on-tertiary-fixed: #331014;
-  --tertiary-fixed-dim: #F4B7BA;
-  --on-tertiary-fixed-variant: #663B3E;
-  --surface-dim: #E0D7DF;
-  --surface-bright: #FFF7FD;
+  --inverse-surface: #2F3033;
+  --inverse-on-surface: #F1F0F3;
+  --inverse-primary: #AAC9EF;
+  --primary-fixed: #D0E4FF;
+  --on-primary-fixed: #001D35;
+  --primary-fixed-dim: #AAC9EF;
+  --on-primary-fixed-variant: #294968;
+  --secondary-fixed: #D8E3F4;
+  --on-secondary-fixed: #111C28;
+  --secondary-fixed-dim: #BCC7D8;
+  --on-secondary-fixed-variant: #3D4855;
+  --tertiary-fixed: #FBD7FF;
+  --on-tertiary-fixed: #2B1033;
+  --tertiary-fixed-dim: #E0BAE6;
+  --on-tertiary-fixed-variant: #5A3C61;
+  --surface-dim: #DADADC;
+  --surface-bright: #FAF9FC;
   --surface-container-lowest: #FFFFFF;
-  --surface-container-low: #FAF1F9;
-  --surface-container: #F4EBF3;
-  --surface-container-high: #EEE6ED;
-  --surface-container-highest: #E9E0E8;
+  --surface-container-low: #F4F3F6;
+  --surface-container: #EEEDF0;
+  --surface-container-high: #E8E8EB;
+  --surface-container-highest: #E3E2E5;
 }
 
 /* variables-dark.css */
